# BinaryNet_TF

./: CMakeLists.txt  Notes.md  README.md  main.py  main_test.py
Operators/OpSource/: Binarize.cpp  CMakeLists.txt  ShiftBasedNorm.cpp  testop.cpp
Operators/OpTest/: binarizeOpTest.py  zero_out_test.py
